@@ -1,4 +1,0 @@
-try:
-    from numpy.oldnumeric.fft import *
-except ImportError:
-    from numpy.dft.old import *
