@@ -1,4 +1,0 @@
-try:
-    from numpy.oldnumeric.linear_algebra import *
-except ImportError:
-    from numpy.linalg.old import *
