@@ -1,4 +1,0 @@
-try:
-    from numpy.oldnumeric.random_array import *
-except ImportError:
-    from numpy.random import *
